<resources>

    <!-- Application Strings -->
    <string name="app_name">RentalDot</string>
    <!-- <string name="app_name">Car Rental</string> -->
    <string name="app_credits">Submitted by Alvin Yan</string>
    <string name="app_prompt">Tap to Proceed</string>

    <!-- JSON User Storage Variables -->
    <string name="user_file">user-data-cr.json</string>
    <string name="user_json_00">radiusSearch</string>
    <string name="user_json_01">currencyPrice</string>
    <string name="user_json_02">lastSearchLatitude</string>
    <string name="user_json_03">lastSearchLongitude</string>
    <string name="user_json_04">lastSearchAddress</string>

    <!-- API Keys -->
    <string name="google_api_key">AIzaSyAltTgaCx_vxcntwIeiAYQd1eY5FLx3_S8</string>
    <string name="amadeus_api_key">HhWOBcl8icJDaNvGPVG9unqPDazOZfYp</string>

    <!-- Menu Tabs for Selection -->
    <string name="menu_tab_0">Search</string>
    <string name="menu_tab_1">Location</string>
    <string name="menu_tab_2">Options</string>

    <!-- Search Tab -->
    <string name="search_tab_00">Please enter the address.</string>
    <string name="search_tab_01">City</string>
    <string name="search_tab_02">State</string>
    <string name="search_tab_03">ZIP</string>
    <string name="search_tab_04">Pick-Up:</string>
    <string name="search_tab_05">Drop-Off:</string>
    <string name="search_tab_06">Search</string>
    <string name="search_tab_07">Locate Nearby</string>
    <string name="search_tab_08">Select Pick-Up</string>
    <string name="search_tab_09">Select Drop-Off</string>
    <string name="search_date_place">--/--/----</string>

    <string name="notice_00">Welcome!</string>
    <string name="notice_00a">Please input an address to search\nfor nearby car rental shops!</string>
    <string name="notice_01">Connection not found!</string>
    <string name="notice_01a">Please try again.</string>
    <string name="notice_02">Searching for rental shops...</string>
    <string name="notice_02a">Please be patient.</string>
    <string name="notice_03">No rental shops found...</string>
    <string name="notice_03a">Please try again.</string>

    <string name="message_00">Location services not detected.\nPlease enable the location services to use this feature.</string>
    <string name="message_01">Address not found.\nPlease input the appropriate address.</string>
    <string name="message_02">Connection not found.\nPlease try again.</string>

    <string name="row_00">00</string>
    <string name="row_01">Name (IN)</string>
    <string name="row_01a">(mi.)</string>
    <string name="row_01b">mi</string>
    <string name="row_02">(IN)</string>
    <string name="row_03">Address 1</string>
    <string name="row_04">Address 2</string>

    <!-- GeoMap Tab -->
    <string name="map_tab_0">Scan</string>
    <string name="map_tab_1">Find</string>
    <string name="map_tab_2">You are here!</string>
    <string name="map_message_0">Searching for car rentals...\nPlease wait for a moment.</string>

    <!-- Options Tab -->
    <string name="options_tab_0">Location</string>
    <string name="options_tab_0_info">This allows for location detection to\nhelp find nearby car rentals near your\nlocation.</string>
    <string name="options_tab_0_button">Check</string>

    <string name="options_tab_1">Radius Search</string>
    <string name="options_tab_1_ex">50</string>
    <string name="options_tab_1_info">This determines the radius distance in\nkilometers to seek for the nearby car\nrental shops.</string>
    <string name="options_tab_1_warn">* Minimum radius: 5 km\n* Maximum radius: 99 km</string>

    <string name="options_tab_2">Currency Price</string>
    <string name="options_tab_2_info">This allows for location detection to\nhelp find nearby eateries near your\nlocation.</string>
    <string-array name="options_tab_2_options">
        <item>USD</item>
        <item>EUR</item>
    </string-array>

    <string name="options_tab_3">Clear Data</string>
    <string name="options_tab_3_info">This clears the users\'s recent search.</string>
    <string name="options_tab_3_button">Clear</string>

    <!-- Credits -->
    <string name="credits_000">RentalDot</string>
    <string name="credits_001">Developer: Alvin Yan</string>
    <string name="credits_002">Google Maps powered by &#169; Google Services.</string>
    <string name="credits_003">Car Rentals powered by &#169; Amadeus Services.</string>
    <string name="credits_004">All Rights Reserved.</string>

</resources>
