<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Search Form Panel -->
    <LinearLayout
        android:id="@+id/linearSearch"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">

        <EditText
            android:id="@+id/editAddress"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:inputType="text"
            android:textSize="17sp"
            android:paddingLeft="10dp"
            android:hint="@string/search_tab_00"
            android:layout_width="match_parent"
            android:background="@color/colorPrimary"
            android:textColor="@color/textColorWhite"
            android:textColorHint="@color/textColorWhite"
            android:layout_height="30dp" />

        <!-- Address Panels -->
        <LinearLayout
            android:id="@+id/addressPanels"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="3dp"
            android:gravity="center">

            <EditText
                android:id="@+id/editCity"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:inputType="text"
                android:layout_weight="1"
                android:hint="@string/search_tab_01"
                android:layout_width="0dp"
                android:textSize="17sp"
                android:paddingLeft="10dp"
                android:background="@color/colorPrimary"
                android:textColor="@color/textColorWhite"
                android:textColorHint="@color/textColorWhite"
                android:layout_height="30dp"/>

            <Spinner
                android:id="@+id/spinnerState"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="30dp"
                android:textSize="17sp"
                android:background="@color/colorPrimary"
                android:paddingLeft="5dp"
                android:entries="@array/us_states_abbv"
                android:prompt="@string/search_tab_02" />

            <EditText
                android:id="@+id/editZip"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:inputType="number"
                android:layout_weight="1"
                android:textSize="17sp"
                android:paddingLeft="5dp"
                android:hint="@string/search_tab_03"
                android:background="@color/colorPrimary"
                android:textColor="@color/textColorWhite"
                android:textColorHint="@color/textColorWhite"
                android:layout_width="0dp"
                android:layout_height="30dp"/>

        </LinearLayout>

        <!-- Time Button Panels -->
        <LinearLayout
            android:id="@+id/timeButtons"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="1dp"
            android:gravity="center">

            <Button
                android:id="@+id/pickUpButton"
                android:text="@string/search_tab_04"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:textSize="12sp"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:paddingLeft="15dp"
                android:gravity="left|center"/>

            <Button
                android:id="@+id/dropOffButton"
                android:text="@string/search_tab_05"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:textSize="12sp"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:paddingLeft="15dp"
                android:gravity="left|center"/>

        </LinearLayout>

        <!-- Search Button Panels -->
        <LinearLayout
            android:id="@+id/linearButtons"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="2dp"
            android:gravity="center">

            <Button
                android:id="@+id/searchButton"
                android:text="@string/search_tab_06"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:textSize="14sp"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"/>

            <!-- <Button
                android:id="@+id/locationButton"
                android:text="@string/search_tab_07"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:textSize="14sp"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:gravity="center"/> -->

        </LinearLayout>

    </LinearLayout>

    <!-- For First-Time Viewing -->
    <LinearLayout
        android:id="@+id/greeting_linear"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center">

        <TextView
            android:id="@+id/greeting_text_00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/notice_00"/>

        <TextView
            android:id="@+id/greeting_text_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:text="@string/notice_00a"/>

    </LinearLayout>

    <!-- Connection Error -->
    <LinearLayout
        android:id="@+id/connection_linear"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center">

        <TextView
            android:id="@+id/connection_text_00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/notice_01"/>

        <TextView
            android:id="@+id/connection_text_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:text="@string/notice_01a"/>

    </LinearLayout>

    <!-- Loading Results -->
    <LinearLayout
        android:id="@+id/loading_linear"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:gravity="center">

        <ProgressBar
            android:id="@+id/loading_progress"
            android:layout_width="50dp"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/loading_text_00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="25sp"
            android:text="@string/notice_02"/>

        <TextView
            android:id="@+id/loading_text_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:text="@string/notice_02a"/>

    </LinearLayout>

    <!-- No Results Found -->
    <LinearLayout
        android:id="@+id/results_linear"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center">

        <TextView
            android:id="@+id/results_text_00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/notice_03"/>

        <TextView
            android:id="@+id/results_text_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:text="@string/notice_03a"/>

    </LinearLayout>

    <!-- List of found contents -->
    <ListView
        android:id="@+id/listView_00"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="false"
        android:scrollbars="vertical">

    </ListView>

</LinearLayout>