<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <fragment
        android:id="@+id/supportMapFragment"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="match_parent"/>

    <Button
        android:id="@+id/locateButton"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/map_tab_1" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="5dp"
        android:layout_marginTop="55dp"
        android:text="@string/map_tab_0" />

    <EditText
        android:id="@+id/editSearch"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:textSize="17sp"
        android:paddingLeft="10dp"
        android:hint="@string/search_tab_00"
        android:layout_width="275dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/textColorWhite"
        android:textColorHint="@color/textColorWhite"
        android:layout_height="30dp" />

</RelativeLayout>